--- a/module/User/view/user/user/default.phtml
+++ b/module/User/view/user/user/default.phtml
@@ -7,29 +7,22 @@ $this->headTitle($title);
 <p>
     <a href="<?php echo $this->url('user', array('action'=>'add'));?>" class="btn btn-default">Thêm user mới</a>
 </p>
-
-<table class="table">
-    <tr>
-        <th>Username</th>
-        <th>Email</th>
-        <th>Họ và tên</th>
-        <th>Ngày đăng ký</th>
-        <!-- <th>Người tạo</th> -->
-        <th>&nbsp;</th>
-    </tr>
+<div class="container">
+    <div class="row">
     <?php foreach ($users as $user) : ?>
-        <tr>
-            <td><?php echo $this->escapeHtml($user->username);?></td>
-            <td><?php echo $this->escapeHtml($user->email);?></td>
-            <td><?php echo $this->escapeHtml($user->full_name);?></td>
-            <td><?php echo $this->escapeHtml($user->created_at);?></td>
-            <!-- <td><?php // echo $this->escapeHtml($user->creator);?></td> -->
-            <td>
+        <div class="col-md-4 user-tile">
+            <li>Username: <?php echo $this->escapeHtml($user->username);?></li>
+            <li>Email: <?php echo $this->escapeHtml($user->email);?></li>
+            <li>Full name: <?php echo $this->escapeHtml($user->full_name);?></li>
+            <li>Created at: <?php echo $this->escapeHtml($user->created_at);?></li>
+            <!-- <li><?php // echo $this->escapeHtml($user->creator);?></li> -->
+            <div class="row">
                 <a href="<?php echo $this->url('user',
                     array('action'=>'edit', 'id' => $user->id));?>" class="btn btn-primary">Edit</a>
                 <a href="<?php echo $this->url('user',
                     array('action'=>'delete', 'id' => $user->id));?>" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
+            </div>
+        </div>
     <?php endforeach; ?>
-</table>
+    </div>
+</div>
