--- a/module/User/view/user/user/edit.phtml
+++ b/module/User/view/user/user/edit.phtml
@@ -5,7 +5,7 @@ $title = 'Edit album';
 $this->headTitle($title);
 ?>
 <?php
-$form->setAttribute('action', $this->url('album', array('action' => 'edit', 'id' => $this->id)));
+$form->setAttribute('action', $this->url('user', array('action' => 'edit', 'id' => $this->id)));
 $form->prepare();
 ?>
 <div class="col-md-4 col-md-offset-4">
@@ -15,15 +15,23 @@ $form->prepare();
     echo $this->formHidden($form->get('id'));
     ?>
     <div class="form-group">
-        <label for="title">Title</label>
-        <?php echo $this->formRow($form->get('title')); ?>
+        <label for="title">Username</label>
+        <?php echo $this->formRow($form->get('username')); ?>
     </div>
     <div class="form-group">
-        <label for="title">Artist</label>
-        <?php echo $this->formRow($form->get('artist')); ?>
+        <label for="title">Email</label>
+        <?php echo $this->formRow($form->get('email')); ?>
+    </div>
+    <div class="form-group">
+        <label for="title">Full name</label>
+        <?php echo $this->formRow($form->get('full_name')); ?>
+    </div>
+    <div class="form-group">
+        <label for="title">Password</label>
+        <?php echo $this->formRow($form->get('password')); ?>
     </div>
     <div class="form-group">
         <?php echo $this->formSubmit($form->get('submit')); ?>
-        <a href="<?php echo $this->url('album', array('action' => 'index'));?>" class="btn btn-danger">Cancel</a>
+        <a href="<?php echo $this->url('user', array('action' => 'index'));?>" class="btn btn-danger">Cancel</a>
     </div>
     <?php echo $this->form()->closeTag(); ?>
