Edit form title

--- a/module/User/view/user/user/edit.phtml
+++ b/module/User/view/user/user/edit.phtml
@@ -1,7 +1,7 @@
 <?php
 // module/Album/view/album/album/add.phtml:
 
-$title = 'Edit album';
+$title = 'Edit user information';
 $this->headTitle($title);
 ?>
 <?php
