--- a/module/Users/view/users/users/add.phtml
+++ b/module/Users/view/users/users/add.phtml
@@ -1,11 +1,11 @@
 <?php
-// module/User/view/user/user/add.phtml:
+// module/Users/view/users/users/add.phtml:
 
 $title = 'Add new user';
 $this->headTitle($title);
 ?>
 <?php
-$form->setAttribute('action', $this->url('user', array('action' => 'add')));
+$form->setAttribute('action', $this->url('users', array('action' => 'add')));
 $form->prepare();
 ?>
 <div class="col-md-4 col-md-offset-4">
@@ -32,6 +32,6 @@ $form->prepare();
     </div>
     <div class="form-group">
         <?php echo $this->formSubmit($form->get('submit')); ?>
-        <a href="<?php echo $this->url('user', array('action' => 'index'));?>" class="btn btn-danger">Cancel</a>
+        <a href="<?php echo $this->url('users', array('action' => 'index')); ?>" class="btn btn-danger">Cancel</a>
     </div>
     <?php echo $this->form()->closeTag(); ?>
