--- a/module/Users/view/users/users/edit.phtml
+++ b/module/Users/view/users/users/edit.phtml
@@ -5,7 +5,7 @@ $title = 'Edit user information';
 $this->headTitle($title);
 ?>
 <?php
-$form->setAttribute('action', $this->url('user', array('action' => 'edit', 'id' => $this->id)));
+$form->setAttribute('action', $this->url('users', array('action' => 'edit', 'id' => $this->id)));
 $form->prepare();
 ?>
 <div class="col-md-4 col-md-offset-4">
@@ -32,6 +32,6 @@ $form->prepare();
     </div>
     <div class="form-group">
         <?php echo $this->formSubmit($form->get('submit')); ?>
-        <a href="<?php echo $this->url('user', array('action' => 'index'));?>" class="btn btn-danger">Cancel</a>
+        <a href="<?php echo $this->url('users', array('action' => 'index')); ?>" class="btn btn-danger">Cancel</a>
     </div>
     <?php echo $this->form()->closeTag(); ?>
