--- a/module/Users/view/users/users/index.phtml
+++ b/module/Users/view/users/users/index.phtml
@@ -3,33 +3,49 @@
 $title = 'User Panel';
 $this->headTitle($title);
 ?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
-<p>
-    <a href="<?php echo $this->url('users', array('action' => 'add')); ?>" class="btn btn-default">Add new user</a>
-</p>
+<div class="row">
+    <?php
+    if ($this->messages) {
+        foreach ($this->messages as $message) { ?>
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <?php echo $message; ?>
+            </div>
+        <?php }
+    }
+    ?>
+</div>
+<div class="row">
+    <h1><?php echo $this->escapeHtml($title); ?></h1>
 
-<table class="table">
-    <tr>
-        <th>Username</th>
-        <th>Email</th>
-        <th>Full name</th>
-        <th>Created at</th>
-        <!-- <th>Người tạo</th> -->
-        <th>&nbsp;</th>
-    </tr>
-    <?php foreach ($users as $user) : ?>
+    <p>
+        <a href="<?php echo $this->url('users', array('action' => 'add')); ?>" class="btn btn-default">Add new user</a>
+    </p>
+
+    <table class="table">
         <tr>
-            <td><?php echo $this->escapeHtml($user->username); ?></td>
-            <td><?php echo $this->escapeHtml($user->email); ?></td>
-            <td><?php echo $this->escapeHtml($user->full_name); ?></td>
-            <td><?php echo $this->escapeHtml($user->created_at); ?></td>
-            <!-- <td><?php // echo $this->escapeHtml($user->creator);?></td> -->
-            <td>
-                <a href="<?php echo $this->url('users',
-                    array('action' => 'edit', 'id' => $user->id)); ?>" class="btn btn-primary">Edit</a>
-                <a href="<?php echo $this->url('users',
-                    array('action' => 'delete', 'id' => $user->id)); ?>" class="btn btn-danger">Delete</a>
-            </td>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Full name</th>
+            <th>Created at</th>
+            <!-- <th>Người tạo</th> -->
+            <th>&nbsp;</th>
         </tr>
-    <?php endforeach; ?>
-</table>
+        <?php foreach ($users as $user) : ?>
+            <tr>
+                <td><?php echo $this->escapeHtml($user->username); ?></td>
+                <td><?php echo $this->escapeHtml($user->email); ?></td>
+                <td><?php echo $this->escapeHtml($user->full_name); ?></td>
+                <td><?php echo $this->escapeHtml($user->created_at); ?></td>
+                <!-- <td><?php // echo $this->escapeHtml($user->creator);?></td> -->
+                <td>
+                    <a href="<?php echo $this->url('users',
+                        array('action' => 'edit', 'id' => $user->id)); ?>" class="btn btn-primary">Edit</a>
+                    <a href="<?php echo $this->url('users',
+                        array('action' => 'delete', 'id' => $user->id)); ?>" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
+</div>
